--- a/configs/vagrant_defconfig
+++ b/configs/vagrant_defconfig
@@ -8,7 +8,6 @@ BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="i686-buildroot-linux-uclibc"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 BR2_TARGET_GENERIC_GETTY_PORT="console"
 # BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
-BR2_ROOTFS_OVERLAY="board/vagrant/overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/vagrant/root_fs_pre.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/vagrant/root_fs_post.sh"
 BR2_PACKAGE_DROPBEAR=y
@@ -21,3 +20,4 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.9.11"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/vagrant/linux.config"
 BR2_ROOTFS_DEVICE_TABLE="board/vagrant/device_table.txt"
+BR2_ROOTFS_SKELETON_CUSTOM="board/vagrant/skeleton"
