vagrant rootfs is coming along nicely

--- a/configs/vagrant_defconfig
+++ b/configs/vagrant_defconfig
@@ -2,22 +2,21 @@ BR2_x86_i686=y
 BR2_DEFCONFIG="$(CONFIG_DIR)/defconfig"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="/home/vagrant/buildroot/output/host/opt/ext-toolchain/usr"
+BR2_TOOLCHAIN_EXTERNAL_PATH="/usr/local/uclibc-toolchain-3.9/usr"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="i686-buildroot-linux-uclibc"
-# BR2_TOOLCHAIN_EXTERNAL_HAS_THREADS_DEBUG is not set
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
-BR2_TARGET_GENERIC_GETTY_PORT="console"
-# BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
+BR2_TOOLCHAIN_EXTERNAL_LARGEFILE=y
+BR2_TOOLCHAIN_EXTERNAL_INET_IPV6=y
+BR2_TOOLCHAIN_EXTERNAL_LOCALE=y
+BR2_TOOLCHAIN_EXTERNAL_INET_RPC=y
+BR2_TOOLCHAIN_EXTERNAL_CXX=y
+BR2_ENABLE_LOCALE_PURGE=y
+BR2_ENABLE_LOCALE_WHITELIST="C"
+BR2_ROOTFS_DEVICE_TABLE="board/vagrant/device_table.txt"
+BR2_ROOTFS_SKELETON_CUSTOM=y
+BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/vagrant/skeleton"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/vagrant/root_fs_pre.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/vagrant/root_fs_post.sh"
+BR2_PACKAGE_BUSYBOX_CONFIG="board/vagrant/busybox.config"
 BR2_PACKAGE_DROPBEAR=y
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
 # BR2_TARGET_ROOTFS_TAR is not set
-BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.9.11"
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/vagrant/linux.config"
-BR2_ROOTFS_DEVICE_TABLE="board/vagrant/device_table.txt"
-BR2_ROOTFS_SKELETON_CUSTOM="board/vagrant/skeleton"
